k8s-setup/argocd-works/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress 
  namespace: argocd
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx 
  tls: 
    - hosts: 
      - argo-k8s.bunpanin.online
      secretName: argocd-secret
  rules:
  - host: argo-k8s.bunpanin.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              name: https
